tests/samples/0077/parse-error.txt
error[P0001]: PHP opening tag `<?php` is not supported
  --> 0077/code.ara:1:1
  |
1 | <?php
  | ^^^^^ PHP opening tag `<?php` is not supported
  |
  = help: try removing the opening tag

